added some commands in bash and docker