@@ -1,6 +1,6 @@
 1. Check the groups
 ```
-cat /ect/group
+cat /ect/groups
 cat /ect/passwd
 ```
 
@@ -27,7 +27,9 @@ PS1="\[\033[01;32m\]\u@manager\[\033[00m\]\$ " # setting PS1 color full
 #32m for setting color green
 
 yum -y install initscripts && yum clean all
-
+```
+# Maven installation on centos
+```
 # Installation for maven
 # https://tecadmin.net/install-apache-maven-on-centos/
 
@@ -41,3 +43,36 @@ mvn -version
 
 ```
 
+# Fedora
+
+1. Commands related to repolist
+```
+/etc/yum.repos.d
+sudo yum repolist
+sudo dnf repolist
+sudo dnf clean all
+sudo rm -r /var/cache/dnf
+sudo dnf upgrade
+
+sudo groupadd docker
+
+```
+
+
+
+
+--env JAVA_OPTS="-Xmx256m -XX:MaxPermSize=512m" jenkins
+docker run -itd -v data:/var/jenkins_home/ -p 8080:8080 -p 50000:50000 --name jenkins --env JAVA_OPTS="-Xms256 -Xmx256m -Djenkins.install.runSetupWizard=false" jenkinsci/blueocean
+
+docker run -itd -p 3000:3000 --name gitea gitea/gitea
+ --mount type=bind,source="$(pwd)"/target,target=/app
+
+all jenkins JAVA_ARGS parameters are stored in /ect/default/jenkins
+docker run -itd --mount type=bind,source="data",target=/var/jenkins_home/ -p 8080:8080 -p 50000:50000 --name jenkins --env JAVA_OPTS="-Djenkins.install.runSetupWizard=false" jenkinimg
+
+docker cp mycontainer:/foo.txt foo.txt
+docker cp src/. mycontainer:/targe
+
+
+
+54023d7a1d747112785826016c975fec6722f71a
